<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">partE</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_msg">Welcome to PART-E! Since this is the first time you open this app we need you to type in your name</string>
    <string name="welcome_msg_box">Name: </string>
    <string name="button_confirm">   Confirm   </string>
    <string name="button_create"> Create </string>
    <string name="button_createparty"> Create party </string>
    <string name="button_join"> Join party </string>
    <string name="welcome_party_msg"> Time to party!!! But first please insert these dates: </string>
    <string name="party_msg_box"> Title: </string>
    <string name="from_box"> From: </string>
    <string name="to_box"> To: </string>
    <string name="fromH_box"> At: </string>
    <string name="toH_box"> At: </string>
    <string name="qr_image"> qr_invite </string>
    <string name="action_camera"> camera </string>
    <string name="notify_msg"> Allow notification 30 minutes before party? </string>

    <!-- Titles -->
    <string name="scan">Scan</string>
    <string name="encode">Generate</string>
    <string name="decode">Decode</string>

    <!-- Errors and messages -->
    <string name="qrdroid_missing">QR Droid version 3.5 or later is required. Do you want to download or update it for free?</string>
    <string name="from_market">From the Market</string>
    <string name="direct">Direct download</string>
    <string name="cancel">Cancel</string>
    <string name="enter_code">Enter some text to encode</string>
    <string name="not_saved">QR code image could not be saved. Check your SD card is available</string>
    <string name="saved">QR code image was saved as</string>
    <string name="enter_url">Enter local path (starting with /) or remote URL (starting with http://) of QR code image</string>
    <string name="not_decoded">QR code image could not been loaded or decoded</string>
    <string name="procesing">Processing....</string>

    <!-- URLs -->
    <string name="url_market">http://market.android.com/details?id=la.droid.qr</string>
    <string name="url_direct">http://droid.la/apk/qr/</string>
    <string name="url_source">http://qrdroid.com/services</string>

    <!-- Notification -->
    <string name="notification_title">Party Starting!</string>
    <string name="notification_text">The party is starting in 30 min, nuy alcol and dont be late!</string>

</resources>