<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical" >
    <TextView 
        android:id="@+id/welcome_tv"
        android:text="@string/welcome_msg"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/welcome_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:hint="@string/welcome_msg_box" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_confirm"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_primary" />
 </LinearLayout>
</LinearLayout>
